fixed word-wrap
Issue #136

--- a/open-bpmn.glsp-client/open-bpmn-glsp/css/diagram.css
+++ b/open-bpmn.glsp-client/open-bpmn-glsp/css/diagram.css
@@ -145,6 +145,7 @@
 	font-size: 0.6em;
 	font-family: sans-serif;
 	margin: 0.3em;
+	white-space: pre-wrap;
 }
 
 
